<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMS Filter</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_spam">Spam box</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_new_sms">New message</string>

    <!-- action -->
    <string name="action_done">Done</string>
    <string name="action_new_sms">New SMS</string>
    <string name="action_spam_box">Spam box</string>
    <string name="action_setting">Setting</string>
    <string name="action_delete_sms">Delete sms</string>
    <string name="action_mark_spam">Mark as spam sms</string>
    <string name="action_mark_not_spam">Mark NOT spam sms</string>
    <!--  -->
    <string name="action_all">Select all</string>
    <string name="action_delete">Delete</string>
    <string name="action_spam">Spam</string>
    <string name="action_not_spam">Not spam</string>

    <!--  -->
    <string name="mess_press_again_to_exit">Double press back to exit</string>

    <!-- sms item -->
    <string name="phone_number">012345345</string>
    <string name="content">Ta la nhen la nhen giang to  bjnasf maskmf oas fas f</string>
    <string name="date">09/08</string>
    <string name="sending">Sending</string>

    <!-- option button -->
    <string name="delete">Delete</string>
    <string name="spam">Spam</string>
    <string name="not_spam">Not spam</string>
    <string name="title_activity_smsdetail">SMSDetailActivity</string>

    <!-- setting -->
    <string name="setting_new_sms_nofitication">"Play sound &amp; vibrate when having new SMS"</string>
    <string name="setting_update_sms_keyword">Update SMS keyword</string>
    <string name="setting_last_update_sms_keyword">"Last updated "</string>
    <string name="updating">"Updating..."</string>
    <string name="ok">"OK"</string>
    <string name="update_success">Update successful.</string>
    <string name="update_fail_time_out">Update fail. Connect to server time out.</string>
    <string name="update_fail_no_network">Update fail. No network.</string>
    <string name="update_fail_problem_on_server">Update fail. Having a unknown problem on server.</string>

    <!-- new massage activity -->
    <string name="send">Send</string>
    <string name="btn_contact">"+"</string>
    <string name="phone_number_wrong_format">"The phone number is wrong format"</string>
    <string name="message_content_empty">"Enter content of message please!"</string>
    <string name="message_sent">"Message sent."</string>
    <string name="message_sent_fail">"Message sent failly. Please try again."</string>

</resources>