<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- <item -->
    <!-- android:id="@+id/action_done" -->
    <!-- android:showAsAction="ifRoom" -->
    <!-- android:icon="@drawable/done_icon" -->
    <!-- android:title="@string/action_done" -->
    <!-- android:visible="false"/> -->

    <item
        android:id="@+id/action_spam_box"
        android:showAsAction="withText"
        android:title="@string/action_spam_box"
        android:visible="true"/>
    <item
        android:id="@+id/action_delete_sms"
        android:showAsAction="withText"
        android:title="@string/action_delete_sms"
        android:visible="true"/>
    <item
        android:id="@+id/action_mark_as_spam"
        android:showAsAction="withText"
        android:title="@string/action_mark_spam"
        android:visible="true"/>
    <item
        android:id="@+id/action_mark_as_not_spam"
        android:showAsAction="withText"
        android:title="@string/action_mark_not_spam"
        android:visible="true"/>

</menu>