<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root_item"
    android:layout_width="match_parent"
    android:layout_height="@dimen/sms_item_height"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/img_contact_icon"
        android:layout_width="@dimen/sms_item_height"
        android:layout_height="@dimen/sms_item_height"
        android:src="@drawable/ic_contact_picture" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_phone_number"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/phone_number" />

        <TextView
            android:id="@+id/tv_content"
            style="@style/TextViewStyleSmallSize2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <CheckBox
                android:id="@+id/cb_selection"
                android:layout_width="wrap_content"
                android:clickable="false"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_date"
            style="@style/TextViewStyleSmallSize2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />
    </LinearLayout>

</LinearLayout>