<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/layout_root_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sms_detail_item_margin_left_right_default"
        android:layout_marginRight="@dimen/sms_detail_item_margin_left_right_default"
        android:background="@drawable/shape_sms_detail"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="4dp" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_content"
                style="@style/TextViewStyle_Big"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="7dp" >

                <TextView
                    android:id="@+id/tv_date"
                    style="@style/TextViewStyleSmallSize2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/layout_sending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible" >

                    <TextView
                        style="@style/TextViewStyleSmallSize2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:text="@string/sending" />

                    <ProgressBar
                        style="@android:style/Widget.ProgressBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/layout_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:visibility="gone" >

            <CheckBox
                android:id="@+id/cb_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false" />
        </FrameLayout>
    </LinearLayout>

</FrameLayout>